# ZipLib

./: .gitignore  CMakeLists.txt  Makefile  README.md  ZipLib.sln  ZipLib_Linux.sln
Source/: CMakeLists.txt
Source/Sample/: CMakeLists.txt  Main.cpp  Sample.vcxproj  Sample_Linux.vcxproj
Source/Test/: Config.h  Main.cpp  Utils.cpp  Utils.h  ZipLibTest.vcxproj  ZipLibTest.vcxproj.filters  ZipLibTestVS.vcxproj  ZipLibTestVS.vcxproj.filters  stdafx.cpp  stdafx.h
Source/Test/Catch/: catch.h
Source/Test/ZipTools/: IZipTool.h  SevenZipTool.cpp  SevenZipTool.h
Source/ZipLib/: CMakeLists.txt  EndOfCentralDirectoryBlock.cpp  EndOfCentralDirectoryBlock.h  ZipArchive.cpp  ZipArchive.h  ZipArchiveEntry.cpp  ZipArchiveEntry.h  ZipCentralDirectoryFileHeader.cpp  ZipCentralDirectoryFileHeader.h  ZipFile.cpp  ZipFile.h  ZipGenericExtraField.cpp  ZipGenericExtraField.h  ZipLib.vcxproj  ZipLib.vcxproj.filters  ZipLib_Linux.vcxproj  ZipLib_Linux.vcxproj.filters  ZipLocalFileHeader.cpp  ZipLocalFileHeader.h
Source/ZipLib/compression/: compression_interface.h
Source/ZipLib/compression/bzip2/: bzip2_decoder.h  bzip2_decoder_properties.h  bzip2_encoder.h  bzip2_encoder_properties.h  bzip2_properties.h
Source/ZipLib/compression/deflate/: deflate_decoder.h  deflate_decoder_properties.h  deflate_encoder.h  deflate_encoder_properties.h  deflate_properties.h
Source/ZipLib/compression/lzma/: lzma_decoder.h  lzma_decoder_properties.h  lzma_encoder.h  lzma_encoder_properties.h  lzma_properties.h
Source/ZipLib/compression/lzma/detail/: lzma_alloc.h  lzma_handle.h  lzma_header.h  lzma_in_stream.h  lzma_out_stream.h
Source/ZipLib/compression/store/: store_decoder.h  store_decoder_properties.h  store_encoder.h  store_encoder_properties.h  store_properties.h
Source/ZipLib/detail/: EndOfCentralDirectoryBlock.cpp  ZipArchiveEntryInfo.h  ZipBitFlag.h  ZipCentralDirectoryFileHeader.cpp  ZipCentralDirectoryFileHeader.h  ZipGenericExtraField.cpp  ZipGenericExtraField.h  ZipLocalFileHeader.cpp  ZipLocalFileHeader.h
Source/ZipLib/encryption/: encryption_interface.h
Source/ZipLib/encryption/aes/: aes_decoder.h  aes_decoder_properties.h  aes_encoder.h  aes_encoder_properties.h  aes_properties.h  common.h
Source/ZipLib/encryption/aes/detail/: aes_impl.cpp  aes_impl.h  aes_salt.h  aes_types.h
Source/ZipLib/encryption/zipcrypto/: zipcrypto_decoder.h  zipcrypto_decoder_properties.h  zipcrypto_encoder.h  zipcrypto_encoder_properties.h  zipcrypto_properties.h
Source/ZipLib/encryption/zipcrypto/detail/: encryption_header.h  zipcrypto.h  zipcrypto_encryption_header.h  zipcrypto_keys.h
Source/ZipLib/extlibs/: CMakeLists.txt
Source/ZipLib/extlibs/aes/: aes.vcxproj  aes.vcxproj.filters  entropy.c
Source/ZipLib/extlibs/bzip2/: CMakeLists.txt  bzip2.vcxproj  bzip2_Linux.vcxproj
Source/ZipLib/extlibs/lzma/: CMakeLists.txt  lzma.vcxproj  lzma_Linux.vcxproj  lzma_Linux.vcxproj.filters
Source/ZipLib/extlibs/zlib/: CMakeLists.txt  zlib.vcxproj  zlib_Linux.vcxproj
Source/ZipLib/methods/: Bzip2Method.h  CompressionMethod.cpp  CompressionMethod.h  DeflateMethod.h  DummyMethod.h  EncryptionMethod.cpp  EncryptionMethod.h  ICompressionMethod.h  LzmaMethod.h  MethodTemplate.h  StoreMethod.h  ZipMethod.h  ZipMethodDescriptor.h  ZipMethodResolver.h
Source/ZipLib/methods/compression/: Bzip2Method.h  DeflateMethod.h  LzmaMethod.h  StoreMethod.h
Source/ZipLib/methods/encryption/: AesCryptoMethod.h  ZipCryptoMethod.h
Source/ZipLib/methods/encryption/detail/: AesExtraField.h
Source/ZipLib/streams/: auditstream.h  compression_decoder_stream.h  compression_encoder_stream.h  crc32stream.h  defstream.h  encryption_decoder_stream.h  encryption_encoder_stream.h  infstream.h  memstream.h  nullstream.h  serialization.h  substream.h  teestream.h  zip_cryptostream.h
Source/ZipLib/streams/streambuffs/: audit_streambuf.h  compression_decoder_streambuf.h  compression_encoder_streambuf.h  crc32_streambuf.h  crc32_table.h  deflate_streambuf.h  encryption_decoder_streambuf.h  encryption_encoder_streambuf.h  inflate_streambuf.h  mem_streambuf.h  null_streambuf.h  streambuf_conf.h  sub_streambuf.h  tee_streambuff.h  zip_crypto_streambuf.h
Source/ZipLib/utils/: stream_utils.h  threadsafe_holder.h  time_utils.h
Source/ZipLib/utils/stream/: serialization.h  storage.h
Source/ZipLibTest/: ZipLibTest.vcxproj
Source/ZipLibTestVS/: ZipLibTestVS.vcxproj  stdafx.cpp  unittest1.cpp
